# security-questionnaire-RFP-response-system

./: .gitignore  Assignment.md  CLAUDE.md  FACTS.md  HANDOFF.md  Makefile  NOTES.md  NOTES_archive.md  ORCHESTRATION.md  PLAN.md  PM_LOG.md  PM_LOG_archive.md  PM_Methodology_Prompt.md  QA_checklist.md  README.md  STATE.md  conftest.py  crazy_test_prompt.md  pyproject.toml  requirements.txt
Reference/: CLAUDE.md  FACTS.md  NOTES.md  PLAN.md  PM_LOG.md  QA_checklist.md  STATE.md
app/: audit.py  confidence.py  config.py  context_stack.py  draft.py  export.py  kb.py  llm.py  pipeline.py  query_optimizer.py  retrieval.py  routing.py  schema.py  state.py
appendix/: TECHNICAL_APPENDIX.md
brief/: REINDEER_BRIEF.md
briefs/: stage-1.md  stage-10.md  stage-2.md  stage-3.md  stage-4.md  stage-5.md  stage-6.md  stage-7.md  stage-7r.md  stage-8.md
data/: policy_tags.synthetic.json
docs/: ARCHITECTURE.md  IMPLEMENTATION_WALKTHROUGH.md  PRESENTATION_DECK.md
handbacks/: stage-1.md  stage-10.md  stage-2.md  stage-3.md  stage-4.md  stage-5.md  stage-6.md  stage-7.md  stage-7r.md  stage-8.md
redteam/: LIVE_REVIEW_50.md  LIVE_RUN_FINDINGS.md  LIVE_RUN_FINDINGS.nothinking.md  LIVE_RUN_FINDINGS.stage10.md  QA_AUDIT_50.md  REDTEAM_FINDINGS.md  SWEEP_PR3_PR4.md  live_review_50.jsonl
samples/: q-confident-001.sample.csv  q-confident-001.sample.jsonl  q-confident-001.sample.md
scripts/: __init__.py  check_graded_artifacts.sh  run_chat.py  run_demo.py  run_live_draft.py  run_live_review.py  run_live_suite.py  run_questionnaire.py
tests/: test_cite_based_sensitivity.py  (+15 more)
(+14 files in other folders)
