[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "reindeer-comet"
version = "0.1.0"
description = "Comet — RFP / Security-Questionnaire Response Agent"
requires-python = ">=3.11"

# Runtime dependencies (mirrored from requirements.txt; pinned for reproducibility)
dependencies = [
    "pydantic==2.13.4",
    "rank-bm25==0.2.2",
    "anthropic==0.112.0",
    "python-dotenv==1.2.2",
]

[tool.setuptools.packages.find]
# Only ship the app package (and its app.eval sub-package).
# tests/, fixtures/, data/, scripts/, and spine docs are dev-only and excluded from any dist.
where = ["."]
include = ["app*"]
exclude = ["tests*", "fixtures*", "data*", "scripts*", "handbacks*", "briefs*", "brief*", "appendix*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
